CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT (hap_scripting_python)


SET(Python_ADDITIONAL_VERSIONS 3)
FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIR})
IF(NOT PYTHONLIBS_FOUND)
  MESSAGE(FATAL_ERROR "Python library and headers not found for module.")
ENDIF(NOT PYTHONLIBS_FOUND)


FILE(GLOB SCRIPTING_PYTHON_SOURCES src/*.c)
ADD_LIBRARY(hap_scripting_python SHARED ${SCRIPTING_PYTHON_SOURCES})


TARGET_LINK_LIBRARIES(hap_scripting_python
  ${PYTHON_LIBRARIES}
)
