CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT (hap_scripting_python)

# Configure Python
SET(Python_USE_STATIC_LIBS TRUE)
SET(Python_FIND_REGISTRY LAST)
SET(CMAKE_FIND_FRAMEWORK LAST)

FIND_PACKAGE(Python COMPONENTS Development REQUIRED)
INCLUDE_DIRECTORIES(${Python_INCLUDE_DIRS})
IF(NOT Python_Development_FOUND)
  MESSAGE(FATAL_ERROR "Python library and headers not found for module.")
ENDIF(NOT Python_Development_FOUND)

FILE(GLOB_RECURSE HAP_SCRIPTING_PYTHON_HEADERS include/*.h src/*.h)
FILE(GLOB HAP_SCRIPTING_PYTHON_SOURCES src/*.c)

ADD_LIBRARY(hap_scripting_python SHARED ${HAP_SCRIPTING_PYTHON_SOURCES} ${HAP_SCRIPTING_PYTHON_HEADERS})
TARGET_LINK_LIBRARIES(hap_scripting_python ${Python_LIBRARIES})