CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT (hap_scripting_python)

# Configure Python
SET(Python_ADDITIONAL_VERSIONS 3)

FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})

FILE(GLOB_RECURSE HAP_SCRIPTING_PYTHON_HEADERS include/*.h src/*.h)
FILE(GLOB HAP_SCRIPTING_PYTHON_SOURCES src/*.c)

ADD_LIBRARY(hap_scripting_python SHARED ${HAP_SCRIPTING_PYTHON_SOURCES} ${HAP_SCRIPTING_PYTHON_HEADERS})
TARGET_LINK_LIBRARIES(hap_scripting_python ${PYTHON_LIBRARIES})
